--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.resources.static-locations=file:${user.home}/report
 spring.mvc.static-path-pattern=/**
 spring.http.encoding.force=true
 # 以下信息需要手动配置
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/super-jacoco?useUnicode=true&amp;characterEncoding=utf8
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://10.30.7.152:3306/super-jacoco?useSSL=false
+spring.datasource.username=dev_owner
+spring.datasource.password=ziroomdb
 #git username & password
-gitlab.username=
-gitlab.password=
+gitlab.username=zhujj5
+gitlab.password=Qwer!1234
