--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.datasource.url=jdbc:mysql://10.30.7.152:3306/super-jacoco?useSSL=false
 spring.datasource.username=dev_owner
 spring.datasource.password=ziroomdb
 #git username & password
-gitlab.username=zhujj5
-gitlab.password=Qwer!1234
+gitlab.username=ziroom-ci
+gitlab.password=a3PhE2k!vFRyl&sq
